virtdemo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service-fedora
  namespace: virtualization
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    kubevirt.io/domain: fedoragitops
  sessionAffinity: None
  type: ClusterIP
