virtdemo/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: fedoraroute
  namespace: virtualizationdemo
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: httpd-service-fedora
    weight: 100
  wildcardPolicy: None
status: {}
